--- a/html/071. Done (18-07-2024)/done.html
+++ b/html/071. Done (18-07-2024)/done.html
@@ -77,7 +77,7 @@
             <p>
                 Aku nyari ke ruangannya ngga ada, terus aku naiklah ke lantai 2 
                 buat nyari bapak itu. Nahh, pas posisi aku di tengah-tengah 
-                bagian ke-2 dari lantai, aku ngeliat ke tangga sebelah kanan 
+                bagian ke-2 dari tangga, aku ngeliat ke tangga sebelah kanan 
                 (aku di tangga kirinya wkwkwk). Rupanya ada Ri*zan lagi turun 
                 dan posisinya sejajar sama aku, wkwkwk. Dalam hati aku ngomong, 
                 yah sayang banget ngga ketemu, akunya naik dianya turun, mana 
