--- a/html/071. Done (18-07-2024)/done.html
+++ b/html/071. Done (18-07-2024)/done.html
@@ -106,8 +106,56 @@
             <p>
                 Aku ngga ngecek lagi ke lab 3 atau ruang sidang, tapi aku langsung 
                 turun. Aku ngga boleh kehilangan jejak pak Ra*i, hahaha. Nahh, pas 
-                turun itu, posisi di tengah-tengah tangga, sama persis kayak sebelumnya 
-                ...
+                turun itu, posisi di tengah-tengah tangga, sama persis kayak sebelumnya, 
+                aku emang berhenti sebentar disitu buat nengok-nengok ke bawah kali
+                aja pak Ra*i keliatan. Terus pas aku noleh ke tangga samping, ada 
+                Ri*zan lagii, wkwkwk. Kali ini kebalikan yang tadi, aku turun dia 
+                naik. Dalam hatiku, lah kok kayak tadi lagi sih, sayang banget ngga 
+                ketemu.
+            </p>
+            <p>
+                Tapii, kali ini beda. Dia ngeliat akuu di tangga sebelah. Daan dia 
+                manggil akuu. Dalam hatiku ngomong, 'Hah? Ini serius nih aku dipanggil.'
+                Hahahahahahahaha. Apakah ini keajaiban dunia? Kok bisa? Seorang Ri*zan 
+                Fi*ran bin Tgk Ru*li ini manggil aku dari jarak sejauh itu? Hah? 
+            </p>
+            <p>
+                Terus ya aku nyaut lah, kan ngga mungkin pura-pura ngga liat hahaha. 
+                Aku nanya "Ada liat pak Ra*i?" Tapi suaraku emang ngga gede-gede amat.
+                Dia bingung aku ngomong apa. Akunya juga bingung mau ngomong gimana, 
+                masak aku teriak-teriak, ini kampus loh, bukan goa. Jadinya ya, aku 
+                liat dia, dia liat aku, beberapa detik. Mau lanjut ngomong ngga 
+                kedengeran, ahh pokoknya aku bingung lah mau ngapain. Nahh, abis 
+                itu dia naik ke atas, ya aku mau ngapain? Turun laahh, karena rencana 
+                awalku emang mau turun. 
+            </p>
+            <p>
+                Tapii, dia naik ke atas terus turun tangga lagi nyamperin aku, wkwkwk. 
+                Mana dia exited banget lagi nyamperinnya, aku baru turun 2 tangga 
+                dianya udah mau sampai ke depan tanggaku. Ya karna sebenernya aku juga 
+                ragu-ragu sih mau turun, jadinya lama. Jadinya ya udah udah deh, 
+                karena disamperin akunya ngga jadi turun, wkwkwk.
+            </p>
+            <p>
+                Dia udah di sampingku, aku nanyain pak Ra*i. Katanya ada di lab dia 
+                abis jumpai juga. Terus yaudah aku naik aja lagi, wkwkwk. Sebenernya 
+                aku ngerasa kayaknya bapaknya emang ngga ada deh di lab, tapi karena 
+                ditemenin Ri*zan ya aku naik aja lagi (ya kapan lagi kan ditemenin). 
+                Lebih tepatnya sih tujuanku ngikut dia aja, ya kan gampang kalo emang 
+                ngga ada ntar tinggal turun lagi hahaha.
+            </p>
+            <p>
+                Terus sampai depan lab, ternyata bapaknya emang ngga ada. Ya abis 
+                itu aku cerita kalo aku udah ketemu tapi bapaknya tiba-tiba hilang. 
+                Hahahaha. Dianya ketawa. Tapi ngacok juga ya kalo dipikir-pikir, 
+                kenapa aku ngga maksa bapak itu untuk ttd aja dulu, nanti belakangan
+                aku tulis namanya. Tapii kann, tapii aku kan ngikut yang bapaknya 
+                bilang, bapaknya suruh tulis nama dulu, ya aku tulis nama dulu. Masak 
+                aku memaksa bapaknya langsung ttd sih, kan ngga enak.
+            </p>
+            <p>
+                Yaudahlah, aku mau istirahat bentar, nanti lanjut ngoding projekku 
+                yang lain lagi.
             </p>
         </div>
     </div>
