--- a/html/072. Waktu (20-07-2024)/t.html
+++ b/html/072. Waktu (20-07-2024)/t.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src="t.mp4" autoplay controls loop></video>
+            <video src="jj-2.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>Waktu</h1>
@@ -60,6 +60,33 @@
             </p>
             <p>
                 Hmmmm.
+            </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Ahhh bodoamat. Yang penting sekarang adalah menyelesaikan 2 buah 
+                projekku lagi. Yang satu kemaren udah beres, tinggal tunggu dia 
+                semhas kalo emang dia minta aku ngerevisi. Dan ini dua lagi, sambil 
+                nunggu mereka dapat data (datanya belum lengkap wkwkwk), aku buat 
+                aja dulu, nanti tinggal nambahin datanya yekann. Btw, ini 2 lagi 
+                belum termasuk punya Ar* (kalo jadi) sama kak Jul yang juga belum 
+                kirim data. Jadi ya, daripada mikirin hal yang ngga aku tau di 
+                masa depan, mending fokus ngerjain target-target kecilnya satu 
+                persatu. Bukankah cara melewati jalan berkabut adalah dengan 
+                terus berjalan dengan perlahan?
+            </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Btw, jika segala yang memabukkan itu haram, entah berapa banyak 
+                dosaku yang mabuk setiap kali melihat senyumanku. Eaaaa!
+            </p>
+            <p>
+                Mandiri banget ya nisaa, hahaha. Jujur ya, part yang paling aku 
+                suka dari semua part ini adalah bagian sekarang. Karena isinya 
+                kali ini adalah selflove semua, hahahaha.
             </p>
         </div>
     </div>
