--- a/html/074. Istirahat ajalah (22-07-2024)/hmm.html
+++ b/html/074. Istirahat ajalah (22-07-2024)/hmm.html
@@ -51,6 +51,16 @@
                 rumah. Minimal seminggu sekali biar ngga lupa. Oke, aku juga akan 
                 usahain ini deh kedepannya.
             </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Tapii, kok aku jadi jauh ya sama Ris*a? Tau kabarnya aja engga. 
+                Apa aku tanya ya? Boleh deh, tapi ngga sekarang, kapan-kapan ajalah 
+                ya. Aku jarang komunikasi sama temen-temenku sih sekarang, paling 
+                klien webku, kating, kawan bilek, sama Zancok dong. Tapii, kenapa 
+                Zancok masuk ke list ya. Hahaha, dahlah.
+            </p>
         </div>
     </div>
 </body>
