--- a/html/075. Haha (25-07-2024)/ha.html
+++ b/html/075. Haha (25-07-2024)/ha.html
@@ -51,6 +51,43 @@
                 pantesan orang kaya (yang bener-bener kaya) ngga suka lagi 
                 uang, toh mereka udah punya banyak, bingung mau diapain.
             </p>
+            <p>
+                Apa karena aku belum nikah ya, jadi ngga punya banyak 
+                kebutuhan. Iya kali ya, hahaha. 
+            </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Btw, aku jadi keinget deh, jadi ceritanya, pas malam terakhir 
+                aku di dayah kami ujian. Aku duduk di samping ev*i dan safr*i.
+                Terus ya biasalah kami kalo udah ngumpul suka cerita-cerita 
+                dan ketawa-ketawa. Apalagi pas malam ujian itu sama-sama ngga 
+                persiapan. Cerita-cerita gitu, aku nyeletuk kalo aku mau pulang, 
+                mau minta izin hari sabtunya bareng kak Ti*aul (walaupun ngga 
+                jadi akhirnya karena aku pulang duluan pas ayahku sakit). 
+            </p>
+            <p>
+                Terus ya si Saf*i bilang, "Peujeut meukarat that lake izin nisa, 
+                kana ureung preh nyeh?" Hahaha, kami ketawa-ketawa. Siapa juga 
+                yang nunggu saya, hahaha. 
+            </p>
+            <p>
+                Terus ya aku jawab aja iseng, "Eu eu, Insya Allah, hahaha." 
+                Becanda tapii.
+            </p>
+            <p>
+                Saf*i bilang lagi, "Bek jioh-jioh that nisa, bek hek tayak intat."
+            </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Ada lanjutannya, tapi sudah cukup aja deh, hahaha.
+            </p>
+            <p>
+                Hmmm, aku masih mencoba mengumpulkan niatku untuk ngoding.
+            </p>
         </div>
     </div>
 </body>
