--- a/html/075. Haha (25-07-2024)/ha.html
+++ b/html/075. Haha (25-07-2024)/ha.html
@@ -88,6 +88,21 @@
             <p>
                 Hmmm, aku masih mencoba mengumpulkan niatku untuk ngoding.
             </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Ini serius ngga sih. Apa bisa langsung urus ijazah gitu. Tapi 
+                kemaren aku tanya kak Kh*iri katanya, "tunggu aja deh, meunyo 
+                ka yudis nteuk geupeugot akun."
+            </p>
+            <p>
+                Tapi zan kamu tau dari mana sih, wkwkwk. Entahlah, aku tunggu 
+                aja dulu. Sambil nunggu, aku udah nanya kak Anind*a Him* sama 
+                Kak Sin*a Riz*i, siapa tau aku dapat info dari mereka. Tapi 
+                responnya lama, entah akan di balas oleh 2 kakak itu atau engga, 
+                soalnya aku ngga di save.
+            </p>
         </div>
     </div>
 </body>
