--- a/html/075. Haha (25-07-2024)/ha.html
+++ b/html/075. Haha (25-07-2024)/ha.html
@@ -103,6 +103,14 @@
                 responnya lama, entah akan di balas oleh 2 kakak itu atau engga, 
                 soalnya aku ngga di save.
             </p>
+            <p>
+                Ahh, lupakan saja lah.
+            </p>
+            <p>
+                Tapi kok aku seneng ya di wa sama anu, hahahahahahaha.
+                Nanti kapan-kapan deh kita cerita-cerita lagi. Aku mau cas 
+                laptop dulu, baterenya udah mau abis.
+            </p>
         </div>
     </div>
 </body>
