--- a/html/075. Haha (25-07-2024)/ha.html
+++ b/html/075. Haha (25-07-2024)/ha.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src="ha.mp4" autoplay controls loop></video>
+            <video src="hadeuhhhh.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>Hahaha!</h1>
@@ -110,6 +110,15 @@
                 Tapi kok aku seneng ya di wa sama anu, hahahahahahaha.
                 Nanti kapan-kapan deh kita cerita-cerita lagi. Aku mau cas 
                 laptop dulu, baterenya udah mau abis.
+            </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Sebenernua agak kesel sama data tanggal lahirku yang salah dan 
+                ngga bisa diperbaiki lagi. Tapi ya sudahlah apa boleh buat.
+                Teruntuk Rif*an, mohon segera ganti password portal, biar 
+                ngga ke login lagi di hp saya, trms.
             </p>
         </div>
     </div>
