--- a/html/076. Try (26-07-2024)/try.html
+++ b/html/076. Try (26-07-2024)/try.html
@@ -24,6 +24,15 @@
             <p>
                 ...
             </p>
+            <p>
+                Hari ini aku ngejahit baju buat ke pesta sodaraku minggu lusa. 
+                Tapi belum siap, besok mau lanjutin lagi. Buka laptop niatnya 
+                mau ngoding sih, tapi kayaknya aku males deh. Hahaha, liat nanti 
+                deh jadi atau engga nya.
+            </p>
+            <p>
+                Menyikapi janjiku kemaren tentang bercerita, 
+            </p>
         </div>
     </div>
 </body>
