--- a/html/076. Try (26-07-2024)/try.html
+++ b/html/076. Try (26-07-2024)/try.html
@@ -31,7 +31,27 @@
                 deh jadi atau engga nya.
             </p>
             <p>
-                Menyikapi janjiku kemaren tentang bercerita, 
+                Menyikapi janjiku kemaren tentang bercerita, aku mau cerita-cerita
+                aja. Yang kemaren cerita dengan topiknya Ri*zan, a.k.a Zancok. 
+                Tapi kita sebut Zancok aja biar lebih enak. 
+            </p>
+            <p>
+                Sebenernya, aku kalo cerita dia enaknya bikin yang panjang kayak 
+                novel, wkwkwk. Pernah mau bikin sih kemaren, tapii. Hmmm, tapi 
+                kalo dipikir-pikir. Misalkan nih aku buat novel. Terus novelku 
+                laris, akunya terkenal sebagai penulis. Nah, pasti si Zancok tau 
+                dong aku, terus kalo dia baca novelnya, jadi tau dong kalo yang 
+                aku maksud dia, dan isinya emang kisah nyata. 
+            </p>
+            <p>
+                Dan apa? Dan dia jadi tau kalo aku suka dia. Hadeeuhhh, MAU DITAROK 
+                DIMANA MUKA AKU? Dan aku ngga bisa membayangkan reaksi dia gimana. 
+                Tapi dia pasti kepedean, terus dia jadi 'i ek baho,' besar kepala 
+                dan makin sok kegantengan. Ahh, ngga mau aku, malu-maluin aje.
+            </p>
+            <p>
+                Cerita apa ya? Ngga ada cerita di aku, tapii aku lagi males ngoding, 
+                bentarrrr, mikir dulu.
             </p>
         </div>
     </div>
