--- a/html/076. Try (26-07-2024)/try.html
+++ b/html/076. Try (26-07-2024)/try.html
@@ -53,6 +53,125 @@
                 Cerita apa ya? Ngga ada cerita di aku, tapii aku lagi males ngoding, 
                 bentarrrr, mikir dulu.
             </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Jadi, dulu pas kkn, setiap kali masuk mk buk Lid*a kami diminta ke 
+                kampus buat foto. Iyaa, buat foto doang. Tapii, aku dan Ris*a ngga 
+                pernah ke kampus satu kalipun, wkwkwk. Yah, walaupun gitu, nilai 
+                kami tetap bagus dong, hehe. Ibuk ini tipe dosen yang suka ngasih 
+                tugas, jadi hampir tiap minggu ada tugas. Pernah waktu hari kepulangan
+                kkn dan aku masih harus ngerjain tugas, ngeselin banget emang ibuknya.
+            </p>
+            <p>
+                Jadi, waktu hari pulang kkn itu, aku udah siap-siap berangkat dari 
+                subuh, jam 8-an lewat dikit kami udah otw ke kantor kecamatan Sawang.
+                Dan aku yang udah tau tiap hari akan dikasih tugas udah siap-siapin 
+                pulpen + kertas juga buat ngerjainnya. Ternyata baru dikirim pas aku 
+                udah jalan ke kantor kecamatannya dan deadlinenya jam 1 pagi. 
+            </p>
+            <p>
+                Okelah, aku mikirnya, kalo emang bisa nanti aku kerjain aja di tempat 
+                pelepasan. Atau engga pas aku udah sampe dayah. Tapi agak ragu juga 
+                kalo pas sampe dayah aku kerjain akan siap, karena acaranya kan ngga 
+                tau siapnya sampe jam berapa, karna kadang panitianya molor waktu, wkwkwk.
+            </p>
+            <p>
+                Singkat cerita, kami udah di kantor camat itu pake seragam coklat 
+                (kaos yang kami buat khusus kelompok kami) dan aku amat sangat malu 
+                make itu, karena anak-anak kelompok lain pada make almet, dan kami 
+                pada ngga bawa almet di tas ini, almetnya dikoper, kopernya udah 
+                dimasukin ke bus, wkwkwk.
+            </p>
+            <p>
+                Terus ya udah deh, kami masuk ke aula dengan pikiranku yang kacau 
+                karena keinget tugasku takut ngga akan siap aku tulis. Aku udah 
+                duduk di jejeran agak depan, sama Faj*i dan lain-lainnya. Terus 
+                aku liat ada Rif*zan woee, dia ngapainnn di depan? (Sebelumnya udah 
+                keliatan juga sih pas di parkiran, wkwkwk).
+            </p>
+            <p>
+                Singkat cerita, kami yang duduk-duduk udah memenuhi kursi di aula. 
+                Dan aku ketemu Syah*iani juga. Dia ngga kebagian kursi, jadi aku tawarin 
+                duduk berdua sama aku. Aku sempat ngobrol dan cerita-cerita juga 
+                sama dia, sambil nunggu acanya. Tapi aku terus-terusan kepikiran 
+                tugasku yang belum siap, takut banget kelewat deadline. Jam 1 
+                kumpulll. Duhh, mau langsung keluar, tapii Rif*an ngapainn, wkwkwk.
+                Aku belum tau ituu.
+            </p>
+            <p>
+                Ternyataa, Rif*an disitu ngaji. Moderatornya udah nyebutin itu. 
+                Dan aku ngerasa, kayaknya aku harus keluar deh buat nyelesain 
+                tugasku, toh aku masih bisa denger dari luar yekan, daripada 
+                tugasku ngga siap-siap.
+            </p>
+            <p>
+                Sampe diluar, di sana ternyata masih ada Ud*n sama R*ja, mereka 
+                emang malas masuk sih, ya ngga papa juga sekalian aja kami minta 
+                jaga barang disitu, wkwkwk. Aku langsung ambil kertas dan lanjutin 
+                tugasku. Duduk di bangku-bangku depan sama teman kelompok, si Ud*n 
+                sama R*ja.
+            </p>
+            <p>
+                Dari luar kedengeran suaranya Rif*an, kayak biasa sih, ngajinya 
+                surah nuunnn. Lupa nama surahnya apa, yang pasti setelah Al-Mulk 
+                langsung surah itu. Beberapa lama, aku udah mulai fokus lagi 
+                ngerjain tugasku, dan ngga terlalu perhatiin ngajinya dia. Dan 
+                tiba-tiba aku denger lagi udah doa.
+            </p>
+            <p>
+                Aku reflek bilang, "Lah, kok udah do'a?" Si Ud*n sama Raj*, denger 
+                omonganku dan si Udi* bilang, "Ngajii, bukan do'a."
+            </p>
+            <p>
+                Aku makin bingung, "Hah?" Orang jelas-jelas itu do'a. Dan bener loh,
+                si Raja juga nyaut, "Itu doa loh din." 
+            </p>
+            <p>
+                Wkwkwk, bisa-bisanya dia ngga bisa bedain mana Qur'an mana do'a. 
+                Atau entahlah, mungkin dia ngga perhatiin. Hmmm. 
+            </p>
+            <p>
+                Aku sih waktu itu mau pamer, "Ehh itu yang ngaji sohibku loh, 
+                suaranya bagus kan. Hehe." Tapii, karena aku mikir lagi males 
+                banyak ngomong sama mereka, mending nugas aja, jadinya ngga jadi 
+                wkwkwk. Ngga lama setelah itu, temen cewekku juga keluar satu 
+                orang.
+            </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Beres aku nugas, temen cewekku yang keluar ini bilang kalo dia 
+                kehabisan baterai hp dan mau cas. Ya kami coba cari-cari stopkontak 
+                dong, tapi mana ada listik gitu-gitu di luar. Sampe akhirnya kami 
+                ngeliat pondok tentara, wkwkwk. 
+            </p>
+            <p>
+                Akhirnya kami kesitu, dan minta numpang cas hp. Kami disambut baik, 
+                diminta duduk juga sama bapaknya, dan ngga lama setelah itu beberapa 
+                temen cewek juga ikut keluar dan gabung sama kami duduk disitu.
+            </p>
+            <p>
+                Dan acara di aula pun selesai, sambil nunggu-nunggu keberangkatan 
+                kamipun masih duduk-duduk disitu. Tiba-tiba, aku ngeliat Rif*an 
+                jalan keluar dari kantor (kayaknya iya deh keluar dari kantor, 
+                kantor tentara gitu) di depan kami, 'lah kapan masuknya' pikirku. 
+            </p>
+            <p>
+                Terus dia jalan gitukaan. Aku ngeliatin dari belakangnya sampe 
+                dia ngga keliatan lagi. Dan aku mikir waktu itu, 'kayak adegan 
+                drama korea, hahaha.' Haduh, maafkan kerandoman pikiranku, tapi 
+                beneran loh kayak adegan drakor, gitu kann. Wkwkwk.
+            </p>
+            <p>
+                ....
+            </p>
+            <p>
+                Ini udah panjang banget, tapi sebenernya bukan part ini yang mau aku 
+                bahas. Ahh dahlah, cukup aja lah.
+            </p>
         </div>
     </div>
 </body>
