--- a/html/076. Try (26-07-2024)/try.html
+++ b/html/076. Try (26-07-2024)/try.html
@@ -69,7 +69,7 @@
                 subuh, jam 8-an lewat dikit kami udah otw ke kantor kecamatan Sawang.
                 Dan aku yang udah tau tiap hari akan dikasih tugas udah siap-siapin 
                 pulpen + kertas juga buat ngerjainnya. Ternyata baru dikirim pas aku 
-                udah jalan ke kantor kecamatannya dan deadlinenya jam 1 pagi. 
+                udah jalan ke kantor kecamatannya dan deadlinenya jam 1 siang. 
             </p>
             <p>
                 Okelah, aku mikirnya, kalo emang bisa nanti aku kerjain aja di tempat 
