--- a/html/076. Try (26-07-2024)/try.html
+++ b/html/076. Try (26-07-2024)/try.html
@@ -95,7 +95,7 @@
                 Singkat cerita, kami yang duduk-duduk udah memenuhi kursi di aula. 
                 Dan aku ketemu Syah*iani juga. Dia ngga kebagian kursi, jadi aku tawarin 
                 duduk berdua sama aku. Aku sempat ngobrol dan cerita-cerita juga 
-                sama dia, sambil nunggu acanya. Tapi aku terus-terusan kepikiran 
+                sama dia, sambil nunggu acaranya. Tapi aku terus-terusan kepikiran 
                 tugasku yang belum siap, takut banget kelewat deadline. Jam 1 
                 kumpulll. Duhh, mau langsung keluar, tapii Rif*an ngapainn, wkwkwk.
                 Aku belum tau ituu.
