--- a/html/076. Try (26-07-2024)/try.html
+++ b/html/076. Try (26-07-2024)/try.html
@@ -145,7 +145,7 @@
             <p>
                 Beres aku nugas, temen cewekku yang keluar ini bilang kalo dia 
                 kehabisan baterai hp dan mau cas. Ya kami coba cari-cari stopkontak 
-                dong, tapi mana ada listik gitu-gitu di luar. Sampe akhirnya kami 
+                dong, tapi mana ada listrik gitu-gitu di luar. Sampe akhirnya kami 
                 ngeliat pondok tentara, wkwkwk. 
             </p>
             <p>
