--- a/html/076. Try (26-07-2024)/try.html
+++ b/html/076. Try (26-07-2024)/try.html
@@ -170,7 +170,11 @@
             </p>
             <p>
                 Ini udah panjang banget, tapi sebenernya bukan part ini yang mau aku 
-                bahas. Ahh dahlah, cukup aja lah.
+                bahas. Ahh dahlah, cukup aja lah. Besok kayaknya aku ngga ngoding juga 
+                deh, mau nyelesain jahit bajuku dulu, daan hari minggunya aku mau ke 
+                pesta sodaraku. Di Aron, entah Aron yang dimana aku pun ngga tau, 
+                wkwkwk. Tapi bukan PT. Aron, Aron yang bukan PT. Aron, dimana itu 
+                yah. Kakakku ngga jelas pas ditanya, ahh selalu ngeselin emang.
             </p>
         </div>
     </div>
