--- a/html/077. Yesterday (29-07-2024)/yesterday.html
+++ b/html/077. Yesterday (29-07-2024)/yesterday.html
@@ -25,6 +25,24 @@
             <p>
                 Besok aku sudah tidak hidup lagi.
             </p>
+            <p>
+                ....
+            </p>
+            <p>
+                Aku kan kemaren upload foto di pesta itu, tapi aku sama kakakku 
+                doang, karna foto sama darabaronya aku jelek, jadi ngga ku up.
+                Terus ada yang reply, 'tunangan ya?' Bukaaannn, bukaan akuu, 
+                tapi orang nikahan woeee.
+            </p>
+            <p>
+                Mana udah banyak yang liat lagii, ini ss-an kemaren. Sebenernya 
+                bodo amat sih mau orang ngira aku tunangan, tapii.. tapii Rif*an 
+                woee. Kalo dia ngira beneran gimana. Ri*zan juga udah liat, mati 
+                aku, jangan-jangan.
+            </p>
+            <p>
+                Dia posting quotes gitu-gitu woii. Haduh ini apaa maksudnyaa. 
+            </p>
         </div>
     </div>
 </body>
