--- a/html/077. Yesterday (29-07-2024)/yesterday.html
+++ b/html/077. Yesterday (29-07-2024)/yesterday.html
@@ -43,6 +43,11 @@
             <p>
                 Dia posting quotes gitu-gitu woii. Haduh ini apaa maksudnyaa. 
             </p>
+            <p>
+                Apa aku hapus aja ya? Tapi fungsinya apaa? Udah diliat juga woii.
+                Haduuh. Haduuh. Haduuhhh iniii. Akuu harus apaa. Ahhh biarin aja 
+                dah, udah 100-an juga yang liat, mau dihapus percuma.
+            </p>
         </div>
     </div>
 </body>
