--- a/html/077. Yesterday (29-07-2024)/yesterday.html
+++ b/html/077. Yesterday (29-07-2024)/yesterday.html
@@ -48,6 +48,37 @@
                 Haduuh. Haduuh. Haduuhhh iniii. Akuu harus apaa. Ahhh biarin aja 
                 dah, udah 100-an juga yang liat, mau dihapus percuma.
             </p>
+            <p>
+                ...
+            </p>
+            <p><b>
+                Klarifikasi, saya tidak tunangan. 
+            </b></p>
+            <p>
+                Tapi, fungsi bikin klarifikasi ini disini apaa woii, hadeuhh.
+            </p>
+            <p>
+                ....
+            </p>
+            <p>
+                Tapi, gimana caranya aku bisa tunangan sama orang lain kalo aku 
+                aja ngga bisa move on. Ini aja masih dia yang aku pikirin. Hmmm.
+            </p>
+            <p>
+                Siti Khadijah kenapa berani ngelamar Nabi ya? Sebenernya kalo 
+                diliat backgroundnya, Siti Khadijah itu orang kaya yang kayaa 
+                banget, crazy rich. Jadi, kesimpulannya adalah aku harus jadi 
+                crazy rich dulu kah?
+            </p>
+            <p>
+                Sebenernya, kalo jadi crazy rich sih aku udah bisa 50%, karena 
+                crazynya aku udah punya, tinggal richnya aja. Ya kan aku udah 
+                gila, tapi aku ngga kaya. Hadeuhh.
+            </p>
+            <p>
+                Aku harus ngoding sekarang. Udah seminggu-an aku nyantai aja,
+                aku harus dapetin skill 50% nya lagi, yaitu richnya.
+            </p>
         </div>
     </div>
 </body>
