--- a/html/078. Impian (29-07-2024)/impian.html
+++ b/html/078. Impian (29-07-2024)/impian.html
@@ -84,6 +84,29 @@
             <p><i>
                 - biar ngga gila.
             </i></p>
+            <p>
+                ...
+            </p>
+            <p>
+                Btw, galeriku dipenuhi dengan ss-an orang wisuda wkwkwkw. Ya kan mau 
+                liat model baju, makeup dll nya, hahaha. Tapi, kenapa ya kakak-kakak 
+                yang pake cadar pas wisudanya ngga pake cadar. Kayak kak Tia, kak Ira, 
+                hmm, bukannya sayang banget ya.
+            </p>
+            <p>
+                Aku ngomong sama kakakku kemaren, terus kata kakakku mungkin biar ngga 
+                rugi makeupnya wkwkwk. Masak udah cape-cape bayar makeup mahal ngga 
+                keliatan. Tapi jilbabnya juga ngga menutup dada, ahh suka-suka orang 
+                lah ya.
+            </p>
+            <p>
+                Aku jadi mikir, apa aku ngga pake cadar juga yah, wkwkwkwk. Atau gini 
+                deh, pas di acaranya aku pake aja, terus pas mau foto studionya aku 
+                ngga usah pake, wkwkwk. Ya kan foto studio itu buat kenangan aja, bukan 
+                buat diupload, yekan. Yang aku upload nantinya foto pas di gedung acaranya 
+                aja gituu. Soalnya, aku jelek kalo pake cadar, masak foto wisudaku hasilnya 
+                jelek sih, kan sayang.
+            </p>
         </div>
     </div>
 </body>
