--- a/html/078. Impian (29-07-2024)/impian.html
+++ b/html/078. Impian (29-07-2024)/impian.html
@@ -107,6 +107,25 @@
                 aja gituu. Soalnya, aku jelek kalo pake cadar, masak foto wisudaku hasilnya 
                 jelek sih, kan sayang.
             </p>
+            <p>
+                ...
+            </p>
+            <p>
+                21.48
+            </p>
+            <p>
+                Aku lagi mau mulai ngerjain projeknya Ar*, tapi aku bingung deh, masak 
+                dia ngirim filenya udah dipisahin gitu mana data latih dan data uji. 
+                Padahal kan seharusnya di random pake train_test_split. Ini aku buatnya 
+                gimana yaa, bingung deh.
+            </p>
+            <p>
+                Btw, ekspresi mas-mas ini mengingatkanku pada suatu kejadian, wkwkwkw. 
+                Tapi yang anu ngga nutup mulut pake tangan sih. Lagian, kenapa cowok 
+                tidak ekspresif kayak cewek. Mau ketawa ya ketawa aja kali mas, aneh 
+                bener nahan ketawa. Hahahaha. Besok kita cerita (kalo jadi), sekarang 
+                aku mau tidur aja deh ya. Ini videonya.
+            </p>
         </div>
     </div>
 </body>
