--- a/html/078. Impian (29-07-2024)/impian.html
+++ b/html/078. Impian (29-07-2024)/impian.html
@@ -124,7 +124,7 @@
                 Tapi yang anu ngga nutup mulut pake tangan sih. Lagian, kenapa cowok 
                 tidak ekspresif kayak cewek. Mau ketawa ya ketawa aja kali mas, aneh 
                 bener nahan ketawa. Hahahaha. Besok kita cerita (kalo jadi), sekarang 
-                aku mau tidur aja deh ya. Ini videonya.
+                aku mau tidur aja deh ya. Ini videonya (src tiktok).
             </p>
         </div>
     </div>
