--- a/html/079. Kerjaaa (30-07-2024)/krj.html
+++ b/html/079. Kerjaaa (30-07-2024)/krj.html
@@ -56,6 +56,14 @@
             <p>
                 Hahahaha, becanda ya ges ya. Lupakan saja. Aku mau kerja duluuu. 
             </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Akuu masih berkutat dengan score evaluasi yang ngga bisa dipakee. 
+                Masak skornya 0.52 sih, mau dibawa kemana ini modell, hadeuh. 
+                Pusing juga ya, cari inspirasi dulu di kaggle deh ya.
+            </p>
         </div>
     </div>
 </body>
