--- a/html/080. Kapaann (31-07-2024)/kpn.html
+++ b/html/080. Kapaann (31-07-2024)/kpn.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src=".mp4" autoplay controls loop></video>
+            <video src="tknk.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>Kapaann</h1>
@@ -24,6 +24,23 @@
             <p>
                 Coba aku cek-cek lagi deh. Masih ngga bisa, entah web browserku 
                 yang salah, atau dari server mereka. Coba nanti lagi deh.
+            </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Entah gimana cara ningkatin akurasi. Masak masih 5,7, ngga bisa 
+                dipake modelnya kalo gini. Sebenernya kalo pake CNN pasti gampang 
+                banget, apalagi datasetnya juga banyak. Tapi ya metodenya pake 
+                KNN, mana bisa mau pake CNN. Udah gitu ngga digabungin lagi sama 
+                metode lain, katanya satu metode. Ngga tau aja orangnya kalo pake 
+                satu metode skornya jelek banget.
+            </p>
+            <p>
+                Aku harus coba cari referensi buat ningkatin akurasi deh kayaknya.
+                Kaggle udah kucoba sih semalam, tapi baru beberapa aja, belum 
+                nemu contoh yang sesuai, jadi aku coba lagi deh sekarang. 
+                Bismillah.
             </p>
         </div>
     </div>
