--- a/html/080. Kapaann (31-07-2024)/kpn.html
+++ b/html/080. Kapaann (31-07-2024)/kpn.html
@@ -42,6 +42,56 @@
                 nemu contoh yang sesuai, jadi aku coba lagi deh sekarang. 
                 Bismillah.
             </p>
+            <p>
+                ...
+            </p>
+            <p>
+                18.19
+            </p>
+            <p>
+                Belum dapat titik temu nih, gimana ya bikin modelnya, hadeeuhh 
+                ayo nisa, ayo nisa, wkwkwk.  
+            </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Btw, Risk* ngga hubungi aku, dan aku juga ngga hubungi dia wkwkwk. 
+                Ya sudahlah. Sebenernya aku kepikiran dia sih, wkwkwk. Ntar kan 
+                dia tinggal sendiri konsul-konsulnya, biasanya selalu bareng aku, 
+                hahaha, semangat Ris*a.
+            </p>
+            <p>
+                Ohh iya, wkwkwkwk. Dia anu loh. Dia dulu pernah akrab buaangeett 
+                sama si Muk*al. Kayak apa-apa Muk*al, dari mk sampe daftar msib 
+                (dulu banget ini), terus vn-vn-an banyak banget aku liat roomchatnya, 
+                wkwkwk.
+            </p>
+            <p>
+                Sampai suatu hari si Muk*al confess ke Risk*, wkwkwk. Tapi, ya 
+                begitu deh. Terakhir aku dengerin curhat Ris*a sih katanya udah 
+                asing ya, wkwkwk. Bahkan pernah aku sama Riska kayak lagi perlu 
+                apaa gitu, terus aku minta dia chat Muks*l karena setauku kan 
+                akrab tuh, tapi Ris*anya ngga mau wkwkwk.
+            </p>
+            <p>
+                Sebenernya gimana ya, Risk* kan udah punya someone, yang adalah 
+                abangnya kak Dil*a bilekku, hahaha. Jadi, abangnya kak Dil ini 
+                kerja di Bireun, dan kenal Ris*a karena dekat rumahnya Ris*a, 
+                setauku gitu. Dan si Ris*a ke Muk*al tuh ya cuma anggap sahabat 
+                aja gituu. Jujur sih, bagi kami cewek-cewek, kalo udah temenan 
+                ya teman aja gitu, kecuali udah duluan suka baru bisa lebih
+                wkwkwk. Bahkan jadi aneh dan canggung kalo tiba-tiba si teman 
+                confess. 
+            </p>
+            <p>
+                Yah hal yang paling gampang dilakuin sih denial dan tetap lanjut 
+                temenan. Tapi kalo si Teman terlalu serius dan susah buat denial, 
+                ya pasti si cewek beneran nolak dan berujung asing, hahaha. Dahlah 
+                lupakan saja. Kalo aku sendiri, kurasa ngga ada sih temenku yang 
+                suka aku. Kecuali yang aku suka, itumah akunya yang ngarep yak, 
+                hmmm dahlah.
+            </p>
         </div>
     </div>
 </body>
