--- a/html/080. Kapaann (31-07-2024)/kpn.html
+++ b/html/080. Kapaann (31-07-2024)/kpn.html
@@ -92,6 +92,17 @@
                 suka aku. Kecuali yang aku suka, itumah akunya yang ngarep yak, 
                 hmmm dahlah.
             </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Kenapa ngga gini dari tahun lalu hei, bikin pusing aje kamunya.
+                Tapi, ini ekstraksi fiturnya pake CNN yang VGG16 + PCA juga woilah. 
+                Apakah bisa begini?? 
+            </p>
+            <p>
+                Hadeuh banyak nyamuk, mending turu.
+            </p>
         </div>
     </div>
 </body>
