--- a/html/081. August (02-08-2024)/agt.html
+++ b/html/081. August (02-08-2024)/agt.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src="tknk.mp4" autoplay controls loop></video>
+            <video src=".mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>August 24</h1>
