--- a/html/081. August (02-08-2024)/agt.html
+++ b/html/081. August (02-08-2024)/agt.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src=".mp4" autoplay controls loop></video>
+            <video src="agt.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>August 24</h1>
@@ -30,6 +30,17 @@
             </p>
             <p>
                 Hmmm, gimana ya.
+            </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Hmmm, tadi skornya kecil-kecil terus, sekalinya dapat skor 
+                gede malah 100%, sama aja ngga bisa dipake. Sudah capek 
+                berkutat dengan underfitting malah dapat overfitting lagii.
+            </p>
+            <p>
+                Bismillah, bantu hamba ya Allah.
             </p>
         </div>
     </div>
