--- a/html/081. August (02-08-2024)/agt.html
+++ b/html/081. August (02-08-2024)/agt.html
@@ -42,6 +42,18 @@
             <p>
                 Bismillah, bantu hamba ya Allah.
             </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Done! Alhamdulillah.
+            </p>
+            <p>
+                Akurasi 96%, dan udah sesuai sama langkah-langkah klasifikasi yang 
+                ada di proposal. Kalo mau lebih kecil tinggal atur K nya aja, dan 
+                96% udah pas banget sih menurutku, kalo 98% ketinggian atau 91% 
+                kedikitan. Karena sudah berhasil, saatnya bikin jj, hahaha.
+            </p>
         </div>
     </div>
 </body>
