--- a/html/081. August (02-08-2024)/agt.html
+++ b/html/081. August (02-08-2024)/agt.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src="agt.mp4" autoplay controls loop></video>
+            <video src="data-scientist.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>August 24</h1>
@@ -53,6 +53,14 @@
                 ada di proposal. Kalo mau lebih kecil tinggal atur K nya aja, dan 
                 96% udah pas banget sih menurutku, kalo 98% ketinggian atau 91% 
                 kedikitan. Karena sudah berhasil, saatnya bikin jj, hahaha.
+            </p>
+            <p>
+                Ternyata bisa juga aku ya, memecahkan permasalahan ini (walaupun 
+                dibantu AI), kirain ngga bakal bisa, hehe. Gimana, udah cocok 
+                jadi data scientist kelas dunia belum? 
+            </p>
+            <p>
+                Kalo belum, saatnya kita belajar dan cari pengalaman lagi sayang.
             </p>
         </div>
     </div>
