--- a/html/083. Time (04-08-2024)/time.html
+++ b/html/083. Time (04-08-2024)/time.html
@@ -32,6 +32,12 @@
                 Btw, aku terlaalu mager ambil hp sama kabel usb, nanti kapan-kapan 
                 nambahin videonya deh ya, wkwkwk.
             </p>
+            <p>
+                Ohh iya, wkwkwk. Kak Napiss kok udah Master Management aja sihh. 
+                Keren banget ya orang-orangg. Tapii aku ngga mau ngejar M.Kom 
+                deh kayaknya, udah pusing, apalagi kalo M.Kom unimal, atau 
+                Banda Aceh, ngga dulu.
+            </p>
         </div>
     </div>
 </body>
